src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
interface IPerson {
  name: string;
  /** @gqlField */
  hello: string;
}

/** @gqlField */
export function greeting(person: IPerson): string {
  return `Hello ${person.name}!`;
}

/**
 * @gqlInterface
 * @gqlImplements IPerson
 */
interface User {
  __typename: "User";
  name: string;
  /** @gqlField */
  hello: string;

  /** @gqlField */
  greeting(): string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts:9:17 - error: Field "User.greeting" can only be defined once.

9 export function greeting(person: IPerson): string {
                  ~~~~~~~~

  src/tests/fixtures/extend_interface/redefineFiledThatExistsOnImplementingInterface.invalid.ts:24:3
    24   greeting(): string;
         ~~~~~~~~
    Related location
